--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
+        "@reactivex/rxjs": "^6.6.3",
         "@rebass/preset": "^4.0.5",
         "@testing-library/jest-dom": "^4.2.4",
         "@testing-library/react": "^9.3.2",
@@ -17,6 +18,7 @@
         "react-router-dom": "^5.2.0",
         "react-scripts": "3.4.3",
         "rebass": "^4.0.7",
+        "rxjs": "^6.6.3",
         "typescript": "~3.7.2",
         "use-sound": "^1.0.2"
     },
