--- a/package.json
+++ b/package.json
@@ -5,11 +5,6 @@
     "dependencies": {
         "@reactivex/rxjs": "^6.6.3",
         "@rebass/preset": "^4.0.5",
-        "@testing-library/jest-dom": "^4.2.4",
-        "@testing-library/react": "^9.3.2",
-        "@testing-library/user-event": "^7.1.2",
-        "@types/ramda": "^0.27.30",
-        "@types/react-beautiful-dnd": "^13.0.0",
         "emotion-theming": "^10.0.27",
         "eslint-plugin-react-hooks": "^4.2.0",
         "ramda": "^0.27.1",
@@ -61,6 +56,11 @@
         "@types/react-icons": "^3.0.0",
         "@types/react-router": "^5.1.8",
         "@types/react-router-dom": "^5.1.6",
-        "@types/rebass": "^4.0.7"
+        "@types/rebass": "^4.0.7",
+        "@types/ramda": "^0.27.30",
+        "@types/react-beautiful-dnd": "^13.0.0",
+        "@testing-library/jest-dom": "^4.2.4",
+        "@testing-library/react": "^9.3.2",
+        "@testing-library/user-event": "^7.1.2"
     }
 }
